--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,55 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Contestapp" %></title>
     <%= csrf_meta_tags %>
-
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
     <%= stylesheet_link_tag "application", :media => "all" %>
-
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
     <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-
     <!-- For iPhone with high-resolution Retina display: -->
     <!-- Size should be 114 x 114 pixels -->
     <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-
     <!-- For first- and second-generation iPad: -->
     <!-- Size should be 72 x 72 pixels -->
     <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-
     <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
     <!-- Size should be 57 x 57 pixels -->
     <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-
-    <%= javascript_include_tag "default" %>
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
-    <![endif]-->
+    <%= javascript_include_tag "application" %>
   </head>
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="brand" href="/">Contestapp</a>
-        <div class="container-fluid nav-collapse">
-          <ul class="nav">
-            <li><%= link_to "Products", products_path%></li>
-            <li><%= link_to "Orders", orders_path%></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+    <div class="navbar navbar-fluid-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+         <% if logged_in? %>
+             <a class="btn btn-navbar" data-target=".nav-collapse"
+   data-toggle="collapse">
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+             </a>
+             <% end %>
+             <a class="brand" href="/">Contest App</a>
+             <% if logged_in? %>
+               <div class="container-fluid nav-collapse">
+                 <ul class="nav">
+                   <li><%= link_to "Products", products_path  %></li>
+                   <li><%= link_to "Orders", orders_path  %></li>
+                   <li><%= link_to "Logout", sessions_destroy_path %>
+                   </li>
+                 </ul>
+               </div><!--/.nav-collapse -->
+             <% end %>
+          </div>
+        </div>
       </div>
-    </div>
-
       <div class="container-fluid">
         <div class="row-fluid">
           <% if content_for?(:sidebar) %>
@@ -75,9 +74,8 @@
           <% end %>
         </div>
         <footer>
-          <p>&copy; Company 2016</p>
+          <p>&copy; Company 2014</p>
         </footer>
-    </div> <!-- /container -->
-
-  </body>
-</html>
+        </div> <!-- /container -->
+      </body>
+    </html>
